<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/splash_screen_bg"
        android:layout_width="match_parent"
...
        android:id="@+id/login_center_space"
        android:layout_width="@dimen/dp_5"
        android:layout_height="@dimen/dp_1"
        android:layout_centerInParent="true" />

    <RelativeLayout
        android:id="@+id/login_btn_fb"
        android:layout_width="@dimen/dp_170"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_ll_accept_policy_layout"
        android:layout_toRightOf="@id/login_center_space"
        android:background="@drawable/facebook_sc_icon">

...
