...

                </LinearLayout>

            </LinearLayout>

            <com.jeeva.android.widgets.customfont.CustomButton
                android:id="@+id/new_challenge_matches_join_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_40"
                android:layout_marginTop="@dimen/dim_12"
                android:background="@drawable/light_blue_button_selector"
                android:onClick="onClick"
                android:paddingBottom="@dimen/dp_4"
...
                app:typeface="lato_regular"/>

        </LinearLayout>

        <!-- Matches Layout -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/match_timeline_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
