<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/inplay_contest_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/dim_6"
            android:clipToPadding="false"/>

        <!-- Empty list -->
        <com.jeeva.android.widgets.customfont.CustomTextView
            android:id="@+id/empty_list_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/grey_999999"
            android:text="You haven't joined any challenge of this sport!"
            android:textSize="@dimen/sp_11"
            app:typeface="lato_regular"
            android:visibility="gone"
            android:layout_marginTop="@dimen/dim_20"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
