...
                    android:textSize="@dimen/sp_12"
                    app:typeface="lato_regular" />

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/contest_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <!-- Empty list -->
            <com.jeeva.android.widgets.customfont.CustomTextView
                android:id="@+id/empty_list_textView"
...
