<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/code_gray_1d"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp_10">

    <LinearLayout
        android:id="@+id/pool_row_ll_join_layout"
        android:layout_width="@dimen/dp_120"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_11"
        android:layout_marginBottom="@dimen/dp_16"
        android:layout_alignParentRight="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.jeeva.android.widgets.customfont.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fee"
            android:textAllCaps="true"
            android:textColor="@color/white_50"
            android:textSize="@dimen/dp_9"
            app:typeface="lato_regular" />

        <com.jeeva.android.widgets.customfont.CustomTextView
            android:id="@+id/pool_row_tv_entry_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/paid_entry_tv_color"
            android:textSize="@dimen/dp_14"
            android:layout_marginTop="@dimen/dp_2"
            app:typeface="lato_light" />

        <com.jeeva.android.widgets.customfont.CustomButton
            android:id="@+id/pool_row_btn_join"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_34"
            android:background="@drawable/paid_join_btn_bg"
            android:onClick="onClick"
            android:paddingBottom="@dimen/dp_4"
            android:text="Join"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_12"
            app:typeface="lato_regular" />

    </LinearLayout>

    <View
        android:id="@+id/pool_row_v_line_separator"
        android:layout_width="@dimen/dp_0.7"
        android:layout_height="@dimen/dp_100"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_toLeftOf="@id/pool_row_ll_join_layout"
        android:background="@color/white_20" />

    <RelativeLayout
        android:id="@+id/pool_row_rl_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:paddingLeft="@dimen/dp_5"
        android:layout_alignTop="@id/pool_row_ll_join_layout"
        android:layout_toLeftOf="@id/pool_row_v_line_separator">

        <com.jeeva.android.widgets.customfont.CustomTextView
            android:id="@+id/pool_row_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="Pool Challenge 1"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_13"
            app:typeface="lato_regular" />

        <com.jeeva.android.widgets.customfont.CustomTextView
            android:id="@+id/pool_row_tv_number_of_prizes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="No Prizes"
            android:includeFontPadding="false"
            android:layout_below="@+id/pool_row_tv_name"
            android:textColor="@color/white_60"
            android:textSize="@dimen/dp_12"
            app:typeface="lato_regular"
            android:visibility="gone"/>

        <com.jeeva.android.widgets.customfont.CustomTextView
            android:id="@+id/pool_row_tv_max_entries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:includeFontPadding="false"
            android:layout_below="@+id/pool_row_tv_number_of_prizes"
            android:textColor="@color/white_60"
            android:textSize="@dimen/dp_12"
            app:typeface="lato_regular"
            android:visibility="visible"/>


        <LinearLayout
            android:id="@+id/pool_row_ll_member_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pool_row_tv_max_entries"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_12"
            android:clickable="true"
            android:paddingTop="@dimen/dp_7"
            android:paddingBottom="@dimen/dp_7"
            android:orientation="vertical">

            <com.jeeva.android.widgets.customfont.CustomTextView
                android:id="@+id/pool_row_tv_label_members"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Entries"
                android:textAllCaps="true"
                android:textColor="@color/white_50"
                android:textSize="@dimen/dp_9"
                app:typeface="lato_regular" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.jeeva.android.widgets.customfont.CustomTextView
                    android:id="@+id/pool_row_tv_member_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:includeFontPadding="false"
                    android:textColor="@color/free_entry_tv_color"
                    android:textSize="@dimen/dp_10"
                    app:typeface="lato_bold" />

                <ImageView
                    android:id="@+id/pool_row_iv_member_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/pool_row_tv_member_count"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_4"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/pool_row_ll_reward_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/pool_row_ll_member_layout"
            android:layout_toRightOf="@id/pool_row_ll_member_layout"
            android:clickable="true"
            android:paddingTop="@dimen/dp_7"
            android:paddingBottom="@dimen/dp_7"
            android:orientation="vertical">

            <com.jeeva.android.widgets.customfont.CustomTextView
                android:id="@+id/pool_row_tv_label_rewards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Prizes"
                android:textAllCaps="true"
                android:textColor="@color/white_50"
                android:textSize="@dimen/dp_9"
                app:typeface="lato_regular" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.jeeva.android.widgets.customfont.CustomTextView
                    android:id="@+id/pool_row_tv_reward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:includeFontPadding="false"
                    android:textColor="#1A6AA1"
                    android:textSize="@dimen/dp_10"
                    app:typeface="lato_bold" />

                <ImageView
                    android:id="@+id/pool_row_iv_reward_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/pool_row_tv_reward"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_4"/>

            </RelativeLayout>


        </LinearLayout>

    </RelativeLayout>

    <View
        android:id="@+id/pool_row_v_separator_drop_down"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#333333"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_below="@id/pool_row_v_line_separator"
        android:visibility="gone" />

    <com.jeeva.android.widgets.customfont.CustomTextView
        android:id="@+id/pool_row_tv_dropdown_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textColor="@color/white_50"
        android:textSize="@dimen/dp_9"
        android:text="Members"
        android:layout_below="@+id/pool_row_v_separator_drop_down"
        android:layout_marginTop="@dimen/dp_10"
        app:typeface="lato_regular"
        android:visibility="gone"/>

    <com.jeeva.android.widgets.customfont.CustomTextView
        android:id="@+id/pool_row_tv_dropdown_member_slots_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textColor="@color/white_50"
        android:textSize="@dimen/dp_9"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_below="@+id/pool_row_v_separator_drop_down"
        android:layout_marginTop="@dimen/dp_10"
        app:typeface="lato_regular"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/pool_row_ll_drop_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_below="@id/pool_row_tv_dropdown_title"
        android:orientation="vertical" />

    <View
        android:id="@+id/pool_row_v_disclaimer"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#333333"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_below="@id/pool_row_ll_drop_down"
        android:visibility="gone" />

    <com.jeeva.android.widgets.customfont.CustomTextView
        android:id="@+id/pool_row_tv_disclaimer_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="DISCLAIMER"
        android:layout_below="@+id/pool_row_v_disclaimer"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:textColor="@color/white_50"
        android:textSize="@dimen/dp_9"
        android:visibility="gone"
        app:typeface="lato_regular" />

    <com.jeeva.android.widgets.customfont.CustomTextView
        android:id="@+id/pool_row_tv_disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pool_row_tv_disclaimer_txt"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_6"
        android:layout_marginBottom="@dimen/dp_10"
        android:textColor="@color/white_50"
        android:textSize="@dimen/dp_10"
        android:visibility="gone"
        app:typeface="lato_regular" />


</RelativeLayout>