...
            </RelativeLayout>

        </RelativeLayout>

        <!-- Contents  -->
        <LinearLayout
            android:id="@+id/contestsContentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <in.sportscafe.nostragamus.module.common.CustomTabLayout
...
                app:tabTextColor="@color/white_60"
                app:unselected_textSize="@dimen/sp_12"
                app:unselected_typeface="lato_regular" />

            <!-- ViewPager -->
            <in.sportscafe.nostragamus.module.common.CustomViewPager
                android:id="@+id/contest_viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <!-- Loading View -->
...
