...
                    android:clipToPadding="false"
                    android:paddingRight="@dimen/dim_6" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/challenge_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/dim_6"
                android:paddingTop="@dimen/dim_6"
                android:animateLayoutChanges="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
...
